* Flint 2.2 (2019-04-XX)

** Supported platforms
   - Windows 7 or later.
   - macOS: OS X Mavericks (10.9) or later.
   - Linux distributions such as Debian 9, RHEL/CentOS 6, and RHEL/CentOS 7.

* Flint 2.1.1 (2019-02-01)

** Target platforms
   - macOS: OS X Mavericks (10.9) or later.
** Bug fixes
   - Fix crash at launch on macOS.

* Flint 2.1 (2018-10-15)

** Supported platforms
   - Windows 7 or later.
   - macOS: OS X Mavericks (10.9) or later.
   - Linux distributions such as Debian 9, RHEL/CentOS 6, and RHEL/CentOS 7.
** New features
   - Added a window to show and save the gnuplot script plotting line chart.
   - Allow to give a hint of concurrency in the preference window or as
     flint-exec's input.
   - Save configuration into a directory via CTRL+S.
** Improvements
   - Improved thread safety on parameter fitting.
   - Performance optimizations.
** Bug fixes
   - Fix unexpected hangs.

* Flint 2.0 (2018-04-09)

** Supported platforms
   - Windows: Windows 7, 8, and 10.
   - macOS: OS X Mavericks (10.9) or later.
   - Linux distributions such as Debian 9, RHEL/CentOS 6, and RHEL/CentOS 7.
** New features
   - New main program, formerly called flint2, supersedes the original one.
** Improvements
   - The size of installed binary gets smaller than ever.
   - The windows installer refrains from adding Flint's folder to PATH.
   - Programs of Windows version run faster, thanks to switch from MinGW-w64
     to MSVC.
** Major changes from Flint 1.9
   - Flint no longer depends on Java runtime environment.
   - Flint now calls Gnuplot to render line charts of simulation result;
     you may have to install Gnuplot and must specify the path of its executable
     with Flint's preference menu.

* Flint 1.9 (2017-11-10)

** Supported platforms
   - Windows: Windows 7, 8, and 10.
   - macOS: OS X Mavericks (10.9) or later;
     OS X Mountain Lion (10.8) is no longer supported.
   - POSIX-like environments, including modern Linux.
** New features