@@ -9,6 +9,10 @@
 namespace flint {
 namespace lexer {
 
+struct Rational {
+	std::string lexeme;
+};
+
 struct Real {
 	std::string lexeme;
 };
@@ -19,6 +23,16 @@ struct Real {
 namespace boost {
 namespace spirit {
 namespace traits {
+
+template<typename TIterator>
+struct assign_to_attribute_from_iterators<flint::lexer::Rational, TIterator>
+{
+	static void
+	call(TIterator const& first, TIterator const& last, flint::lexer::Rational& attr)
+	{
+		attr.lexeme = std::string(first, last);
+	}
+};
 
 template<typename TIterator>
 struct assign_to_attribute_from_iterators<flint::lexer::Real, TIterator>
