@@ -60,6 +60,7 @@ struct EquationGrammar : qi::grammar<TIterator, Compound()> {
 			| eq_expr
 			| general_expr
 			| td.real
+			| td.rational
 			| td.integer
 			| td.id
 			| td.keyword;
